2003-11-13  Marco Pesenti Gritti  <marco@gnome.org>

	* gnome-settings-xsettings.c:

	Add a setting for gtk icon theme.

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

Fri Aug  1 14:51:02 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-mouse.c (set_locate_pointer): move declarations
	around.  Patch from Damien Carbery <damien.carbery@sun.com>,
	#118860

Thu Jul 31 14:22:38 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-xsettings.c (translate_string_string_toolbar):
	Patch from Anders Carlsson to special case "both-horiz".

Thu Jul 31 14:06:51 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-mouse.c: Patch from Satyajit Kanungo
	<satyajit.kanungo@wipro.com> to make locate pointer work in
	a multi-screen environment.

2003-07-17  Richard Hult  <richard@imendio.com>

	* gnome-settings-typing-break.c (setup_typing_break): Start with
	-n to avoid the warning about notification area.
	(gnome_settings_typing_break_init): Fix a warning.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-03  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-keybindings.c: (get_screens_list),
	(screen_exec_display_string), (grab_key), (do_grab),
	(gnome_settings_keybindings_load): grab keys on all the screens for the
	current display

Thu Jun 26 07:37:20 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-settings-typing-break.c: new module to handle the
	typing-break-monitor.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-12  Michael Meeks  <michael@ximian.com>

	* Makefile.am: Make IDL compile depend on compiler too.

Mon Jun  2 13:23:25 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-xrdb.c (append_xresources): Patch from Jens
	Granseuer <jensgr@gmx.net> to fix on non-C99 compilers.

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-07  Jody Goldberg <jody@gnome.org>

	* xrdb/Makefile.am (EXTRA_DIST) : EXTRA_DIST the data files
