@@ -1,86 +1,0 @@
-/* XPM */
-static char * 16_mode_big_icons_xpm[] = {
-"24 24 59 1",
-" 	c None",
-".	c #000000",
-"+	c #7C90A3",
-"@	c #5C778F",
-"#	c #4D667E",
-"$	c #5F798F",
-"%	c #4B6983",
-"&	c #374F64",
-"*	c #FFFFFF",
-"=	c #FCFCFC",
-"-	c #FBFBFB",
-";	c #FAFAFA",
-">	c #F9F9F9",
-",	c #F7F7F7",
-"'	c #A4A4A4",
-")	c #F8F8F8",
-"!	c #F6F6F6",
-"~	c #A0A0A0",
-"{	c #826647",
-"]	c #990000",
-"^	c #314E6C",
-"/	c #9DB8D2",
-"(	c #267726",
-"_	c #F4F4F4",
-":	c #A1A1A1",
-"<	c #B39169",
-"[	c #F3F3F3",
-"}	c #EDEDED",
-"|	c #D8D8D8",
-"1	c #E3E3E3",
-"2	c #D5D5D5",
-"3	c #F5F5F5",
-"4	c #C9C9C9",
-"5	c #BFBFBF",
-"6	c #969696",
-"7	c #F1F1F1",
-"8	c #8F8F8F",
-"9	c #FEFEFE",
-"0	c #EFEFEF",
-"a	c #909090",
-"b	c #FDFDFD",
-"c	c #F2F2F2",
-"d	c #EEEEEE",
-"e	c #8C8C8C",
-"f	c #E2E2E2",
-"g	c #C6C6C6",
-"h	c #D4D4D4",
-"i	c #CECECE",
-"j	c #ECECEC",
-"k	c #F0F0F0",
-"l	c #959595",
-"m	c #C2C2C2",
-"n	c #A6A6A6",
-"o	c #9E9E9E",
-"p	c #9D9D9D",
-"q	c #9C9C9C",
-"r	c #9B9B9B",
-"s	c #9F9F9F",
-"t	c #646464",
-"                        ",
-"                        ",
-"                        ",
-"                        ",
-"                        ",
-"    ................    ",
-"    .+@@@@@@@@@@@@#.    ",
-"    .$%%%%%%%%%%%%&.    ",
-"    .*=======-;>>,'.    ",
-"    .*======-;>),!~.    ",
-"    .*={]==^/>)((_:.    ",
-"    .*=]{-;/^),(<[~.    ",
-"    .*;}|;>12!345}6.    ",
-"    .*=-;>),!3_[[78.    ",
-"    .9;/^),{{_[^^0a.    ",
-"    .b>^/!3{{[c^^de.    ",
-"    .=)fg3_hic7hhje.    ",
-"    .)_[cc7k0d}}}}l.    ",
-"    .fmggnoopqqrslt.    ",
-"    ................    ",
-"                        ",
-"                        ",
-"                        ",
-"                        "};
