@@ -1,6 +1,6 @@
 <oaf_info>
   <oaf_server iid="OAFIID:GNOME_SettingsDaemon"
-	      type="exe" location="/local/gnome-head/test/libexec/gnome-settings-daemon">
+	      type="exe" location="@LIBEXECDIR@/gnome-settings-daemon">
     <oaf_attribute name="repo_ids" type="stringv">
       <item value="IDL:Bonobo/Unknown:1.0"/>
       <item value="IDL:GNOME/SettingsDaemon:1.0"/>
