@@ -1,3 +1,11 @@
+2003-12-19  Diego Gonzalez Gonzalez  <diego@pemas.net>
+
+	* Makefile.am: install gnome-settings-daemon in the libexec
+	  directory
+	* GNOME_SettingsDaemon.server.in.in: new file that contains
+ 	  the new locations where the gnome-settings-daemon is to be
+	  found.
+
 2003-11-13  Marco Pesenti Gritti  <marco@gnome.org>
 
 	* gnome-settings-xsettings.c:
